# Robin-AI

./: .gitignore  Dockerfile  README.md  app.py  constants.py  docker-compose.yml  pyproject.toml  requirements.txt  run..sh  run.local.sh  run.sh  sample-auth.config.yaml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: workflow.yml
.github/workflows/: deployment.yml  populate_leaderboard.yml
.streamlit/: config.toml
data/: open-llm-leaderboard.json
src/: constants.py  helpers.py  streamlit_app.py
src/llm/: __init__.py  base.py  factory.py  groq.py  huggingface.py
src/scraper/: openllm_leaderboard.py
src/views/: __init__.py  llm_cost_optimiser.py  llm_leaderboard.py  robinai_chatbot.py
views/: gorilla_llm.py  llm_leaderboard.py  robinai_chatbot.py
