[tool.poetry]
name = "robinai"
version = "0.1.0"
description = ""
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain-groq = "^0.2.0"
langchain-huggingface = "^0.1.0"
langchain-community = "^0.3.1"
streamlit-authenticator = "^0.3.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"